# centipede-with-ik

./: CMakeLists.txt  README.md
include/: Centipede.hpp  FallingSand.hpp  Game.hpp
src/: Centipede.cpp  Game.cpp
src/gait/: GaitController.cpp  GaitController.hpp
src/ik/: LegIK.cpp  LegIK.hpp
src/input/: Camera.cpp  Camera.hpp
src/render/: DrawHelpers.cpp  DrawHelpers.hpp  GridRenderer.cpp  GridRenderer.hpp  Projection.cpp  Projection.hpp
